updating index to add date of birth

--- a/html/index.html
+++ b/html/index.html
@@ -20,8 +20,8 @@
        <input type="email" id="mail" name="user_email">
      </li>
      <li>
-       <label for="msg">Message:</label>
-       <textarea id="msg" name="user_message"></textarea>
+       <label for="dob">Date of Birth:</label>
+       <textarea id="dob" name="user_dob"></textarea>
      </li>
     </ul>
    </form>
