--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
      </li>
      <li>
        <label for="dob">Date of Birth:</label>
-       <textarea id="dob" name="user_dob"></textarea>
+       <input type="dob" id="user_dob">
      </li>
     </ul>
    </form>
