--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body>
-  <form action="/my-handling-form-page" method="post">
+  <form action="/action_page.php" method="get">
     <ul>
      <li>
        <label for="name">Name:</label>
@@ -23,6 +23,7 @@
        <label for="dob">Date of Birth:</label>
        <input type="dob" id="user_dob">
      </li>
+     <input type="submit" value="submit">
     </ul>
    </form>
 </body>
