--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,11 @@
     <ul>
      <li>
        <label for="name">Name:</label>
-       <input type="text" id="name" name="user_name">
+       <input type="text" id="name">
      </li>
      <li>
        <label for="mail">E-mail:</label>
-       <input type="email" id="mail" name="user_email">
+       <input type="email" id="mail">
      </li>
      <li>
        <label for="dob">Date of Birth:</label>
