--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,8 @@
   <form action="/action_page.php" method="get">
     <ul>
      <li>
-       <label for="name">Name:</label>
-       <input type="text" id="name">
+       <label for="phone">Phone Number:</label>
+       <input type="tel" id="phone">
      </li>
      <li>
        <label for="mail">E-mail:</label>
@@ -21,7 +21,7 @@
      </li>
      <li>
        <label for="dob">Date of Birth:</label>
-       <input type="dob" id="user_dob">
+       <input type="date" id="dob">
      </li>
      <input type="submit" value="submit">
     </ul>
