--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body>
-  <form action="/action_page.php" method="get">
+  <form action="null" method="get">
     <ul>
      <li>
        <label for="phone">Phone Number:</label>
