--- a/html/index.html
+++ b/html/index.html
@@ -12,16 +12,16 @@
   <form action="null" method="get">
     <ul>
      <li>
-       <label for="phone">Phone Number:</label>
+       <label for="phone">Phone Number:</label><p></p>
        <input type="tel" id="phone">
      </li>
      <li>
-       <label for="mail">E-mail:</label>
+       <label for="mail">E-mail:</label><p></p>
        <input type="email" id="mail">
      </li>
      <li>
-       <label for="dob">Date of Birth:</label>
-       <input type="date" id="dob">
+       <label for="dob">Date of Birth:</label><p></p>
+       <input type="date" id="dob" placeholder="MM/DD/YYYY">
      </li>
      <input type="submit" value="submit">
     </ul>
