--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
        <label for="dob">Date of Birth:</label><p></p>
        <input type="date" id="dob" placeholder="MM/DD/YYYY">
      </li>
-     <input type="submit" value="submit">
+     <input type="submit" value="Submit">
     </ul>
    </form>
 </body>
