edited css and stylized it further

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body>
+  <h1>Free Taco Bell!</h1>
+  <h2>Enter Your Info for a free Crunchy Taco!</h2>
+  
   <form action="null" method="get">
     <ul>
      <li>
@@ -26,5 +29,6 @@
      <input type="submit" value="Submit">
     </ul>
    </form>
+   <h3>*This website is in no way affiliated with Taco Bell</h3>
 </body>
 </html>
