--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
      </li>
      <li>
        <label for="dob">Date of Birth:</label><p></p>
-       <input type="date" id="dob" placeholder="MM/DD/YYYY">
+       <input type="date" id="dob">
      </li>
-     <input type="submit" value="Submit">
-    </ul>
+     </ul>
+    <input type="submit" value="Submit">
    </form>
    <h3>*This website is in no way affiliated with Taco Bell</h3>
 </body>
